syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.rodrigoeduque";
option java_outer_classname = "Keymanager";

package br.com.zup.rodrigoeduque;
import "google/protobuf/any.proto";

service KeymanagerService {
    rpc registra(RegistrarChavePixRequest) returns (RegistrarChavePixResponse) {}
}

service RemoverChavePixService {
    rpc remove(RemoverChavePixRequest) returns (RemoverChavePixResponse) {}
}

enum TipoChavePix {
    TIPO_CHAVE_PIX_UNSPECIFIED = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    CHAVE_ALEATORIA = 4;
}

enum TipoConta {
    TIPO_CONTA_UNSPECIFIED = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}

message RegistrarChavePixRequest {
    string idCliente = 1;
    TipoChavePix tipoChavePix = 2;
    string chave = 3;
    TipoConta tipo_conta = 4;

}

message RegistrarChavePixResponse {
    string idCliente = 1;
    string idPix = 2;
}

message ErrorDetails {
    int32 code = 1;
    string message = 2;
    repeated google.protobuf.Any details = 3;
}

message RemoverChavePixRequest {
    string idCliente = 1;
    string idPix = 2;
}

message RemoverChavePixResponse {
    string idCliente = 1;
    string idPix = 2;
}